Match naming standard for needs x tool